--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <div class="release-box">
                 <div class="release-header">
                     <img src="files/New.svg" alt="New" class="new-icon">
-                    <h2>NEW RELEASE</h2>
+                    <h2>New Release</h2>
                 </div>
-                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2043036668&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&buying=false&sharing=false&download=false&show_artwork=true&show_playcount=true&show_user=true&inverse=true&light=false"></iframe>
+                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2043036668&color=%23ff0000&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=true&visual=true&show_artwork=true"></iframe>
                 <div style="font-size: 10px; color: #ffffff;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/mauditemachine" title="Maudite Machine" target="_blank" style="color: #ffffff; text-decoration: none;">Maudite Machine</a> · <a href="https://soundcloud.com/mauditemachine/maudite-machine-back-on-track" title="Back On Track (Lumiarium Mix)" target="_blank" style="color: #ffffff; text-decoration: none;">Back On Track (Lumiarium Mix)</a></div>
             </div>
             <div class="release-box">
                 <div class="release-header">
                     <img src="files/New.svg" alt="New" class="new-icon">
-                    <h2>LAST MIXTAPE</h2>
+                    <h2>Last Mixtape</h2>
                 </div>
-                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1912012793&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&buying=false&sharing=false&download=false&show_artwork=true&show_playcount=true&show_user=true&inverse=true&light=false"></iframe>
+                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1912012793&color=%23ff0000&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=true&visual=true&show_artwork=true"></iframe>
                 <div style="font-size: 10px; color: #ffffff;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/mauditemachine" title="Maudite Machine" target="_blank" style="color: #ffffff; text-decoration: none;">Maudite Machine</a> · <a href="https://soundcloud.com/mauditemachine/mixtape-036" title="Mixtape 36" target="_blank" style="color: #ffffff; text-decoration: none;">Mixtape 36</a></div>
             </div>
         </div>
