--- a/index.html
+++ b/index.html
@@ -39,6 +39,43 @@
         padding: 0 20px;
       }
 
+      .releases-section {
+        position: absolute;
+        left: 100vw;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        flex-direction: row;
+        gap: 4rem;
+        padding: 0 5vw;
+      }
+
+      .release-card {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 2rem;
+        min-width: max-content;
+      }
+
+      .release-card img {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+      }
+
+      .release-info {
+        font-size: 0.7rem;
+        opacity: 0.8;
+        padding-top: 1rem;
+        white-space: nowrap;
+      }
+
+      .release-title {
+        font-size: 0.9rem;
+        margin-bottom: 0.5rem;
+      }
+
       .logo-section {
         display: flex;
         flex-direction: column;
@@ -293,6 +330,33 @@
         </p>
       </div>
 
+      <div class="releases-section">
+        <div class="release-card">
+          <img src="medias/Anarchic.jpg" alt="Anarchic" />
+          <div class="release-info">
+            <div class="release-title">Anarchic</div>
+            VRSTL Records<br />
+            UPC 5063655124786<br />
+            ISRC GBLFP2516674<br />
+            Release 20250408
+          </div>
+        </div>
+        <div class="release-card">
+          <img src="medias/Back On Track.jpg" alt="Back On Track" />
+          <div class="release-info">
+            <div class="release-title">Back On Track</div>
+            VRSTL Records
+          </div>
+        </div>
+        <div class="release-card">
+          <img src="medias/Nocturne.jpg" alt="Nocturne" />
+          <div class="release-info">
+            <div class="release-title">Nocturne</div>
+            VRSTL Records
+          </div>
+        </div>
+      </div>
+
       <div class="vertical-menu"></div>
     </div>
 
@@ -342,6 +406,8 @@
       // Convertir le scroll vertical en défilement horizontal
       let scrollPosition = 0;
       const mainContainer = document.querySelector(".main-container");
+      const content = document.querySelector(".content");
+      const releases = document.querySelector(".releases-section");
 
       window.addEventListener(
         "wheel",
@@ -351,7 +417,7 @@
           // Ajuster la vitesse du défilement
           scrollPosition = Math.max(
             0,
-            Math.min(scrollPosition + e.deltaY, window.innerWidth)
+            Math.min(scrollPosition + e.deltaY * 0.8, window.innerWidth * 1.5)
           );
 
           // Appliquer le défilement avec une animation fluide
