adding favicon and fixing soundcloud player

--- a/index.html
+++ b/index.html
@@ -4,259 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maudite Machine</title>
-    <style>
-      @font-face {
-        font-family: "CommitMono";
-        src: url("files/CommitMono-400-Regular.otf") format("opentype");
-      }
-
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        background-color: #090a0a;
-        color: white;
-        font-family: "CommitMono", monospace;
-        height: 100vh;
-        overflow: hidden;
-      }
-
-      .main-container {
-        display: flex;
-        height: 100vh;
-        position: relative;
-      }
-
-      .content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        padding: 0 20px;
-      }
-
-      .releases-section {
-        position: absolute;
-        left: 100vw;
-        top: 50%;
-        transform: translateY(-50%);
-        display: flex;
-        flex-direction: row;
-        gap: 4rem;
-        padding: 0 5vw;
-      }
-
-      .release-card {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        gap: 2rem;
-        min-width: max-content;
-      }
-
-      .release-card img {
-        width: 300px;
-        height: 300px;
-        object-fit: cover;
-        transition: transform 0.3s ease;
-        cursor: pointer;
-      }
-
-      .release-card.anarchic img:hover {
-        transform: scale(1.05);
-      }
-
-      .soundcloud-player {
-        position: absolute;
-        visibility: hidden;
-        width: 0;
-        height: 0;
-      }
-
-      .release-info {
-        font-size: 0.7rem;
-        opacity: 0.8;
-        padding-top: 1rem;
-        white-space: nowrap;
-      }
-
-      .release-title {
-        font-size: 0.9rem;
-        margin-bottom: 0.5rem;
-      }
-
-      .logo-section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 2rem;
-      }
-
-      .description-section {
-        max-width: 879px;
-        padding-right: 10vw;
-      }
-
-      .top-links {
-        display: flex;
-        gap: 1.5rem;
-        margin-bottom: 2rem;
-        align-self: flex-start;
-        margin-left: calc(50% - 300px);
-      }
-
-      .top-links .group {
-        display: flex;
-        gap: 0.5rem;
-      }
-
-      .top-links .social-group {
-        display: flex;
-        gap: 0.5rem;
-        margin-left: 1.5rem;
-      }
-
-      .top-links a {
-        color: white;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 0.7rem;
-        letter-spacing: 0.15em;
-        transition: opacity 0.2s;
-        writing-mode: vertical-rl;
-        text-orientation: mixed;
-        transform: rotate(180deg);
-      }
-
-      .top-links a:hover {
-        opacity: 1;
-      }
-
-      .top-links .soundcloud:hover {
-        color: #ff5500;
-      }
-
-      .top-links .instagram:hover {
-        color: #e4405f;
-      }
-
-      .top-links .bandcamp:hover {
-        color: #629aa9;
-      }
-
-      .top-links .facebook:hover {
-        color: #1877f2;
-      }
-
-      .top-links .youtube:hover {
-        color: #ff0000;
-      }
-
-      .top-links .spotify:hover {
-        color: #1db954;
-      }
-
-      .top-links .beatport:hover {
-        color: #01ff95;
-      }
-
-      .top-links .mixcloud:hover {
-        color: #5000ff;
-      }
-
-      .top-links .tiktok:hover {
-        color: #ff0050;
-      }
-
-      .top-links .vrstl:hover {
-        color: #00ff00;
-      }
-
-      .top-links .ableton:hover {
-        color: #ff764d;
-      }
-
-      .logo {
-        margin-bottom: 2rem;
-        position: relative;
-      }
-
-      .logo img {
-        width: 700px;
-        height: auto;
-      }
-
-      .logo svg {
-        width: 700px;
-        height: auto;
-      }
-
-      .logo path {
-        transition: opacity 1s ease-in-out;
-      }
-
-      .fade-out {
-        opacity: 0;
-      }
-
-      .description {
-        max-width: 879px;
-        line-height: 1.5;
-        font-size: 0.75rem;
-        position: relative;
-      }
-
-      .hidden-letter {
-        position: absolute;
-        background: #090a0a;
-        transition: opacity 0.5s ease;
-        opacity: 0;
-      }
-
-      .hidden-letter.active {
-        opacity: 1;
-      }
-
-      .vertical-menu {
-        position: absolute;
-        top: 12%;
-        right: 7%;
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        height: auto;
-      }
-
-      .vertical-menu a {
-        display: block;
-        color: white;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 0.7rem;
-        writing-mode: vertical-rl;
-        text-orientation: mixed;
-        margin-left: 1.5rem;
-        letter-spacing: 0.15em;
-        transform: rotate(180deg);
-        transition: opacity 0.2s;
-      }
-
-      .vertical-menu a:hover {
-        opacity: 0.7;
-      }
-
-      .footer {
-        position: absolute;
-        bottom: 0.5rem;
-        right: 0.5rem;
-        font-size: 0.6rem;
-        opacity: 0.6;
-      }
-    </style>
+    <link rel="icon" type="image/x-icon" href="files/favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="main-container">
@@ -361,7 +110,12 @@
           <iframe
             class="soundcloud-player"
             id="anarchic-player"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1743661466&color=%23090a0a&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"
+            width="100%"
+            height="166"
+            scrolling="no"
+            frameborder="no"
+            allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/mauditemachine/anarchic&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"
           ></iframe>
         </div>
         <div class="release-card">
@@ -386,89 +140,6 @@
     <div class="footer">Copyright Maudite Machine 2024</div>
 
     <script src="https://w.soundcloud.com/player/api.js"></script>
-    <script>
-      const description = document.querySelector(".description");
-      const text = description.textContent;
-      description.textContent = "";
-
-      // Créer les spans pour chaque lettre
-      for (let i = 0; i < text.length; i++) {
-        const span = document.createElement("span");
-        span.textContent = text[i];
-        span.style.transition = "opacity 0.5s ease";
-        description.appendChild(span);
-      }
-
-      const letters = description.querySelectorAll("span");
-
-      function animateRandomLetter() {
-        const randomIndex = Math.floor(Math.random() * letters.length);
-        const letter = letters[randomIndex];
-
-        // Faire disparaître la lettre
-        letter.style.opacity = "0";
-
-        // Faire réapparaître la lettre après un délai aléatoire (entre 1 et 3 secondes)
-        setTimeout(() => {
-          letter.style.opacity = "1";
-        }, Math.random() * 2000 + 1000);
-      }
-
-      // Démarrer plusieurs animations en parallèle
-      function startAnimations() {
-        // Lancer une nouvelle animation toutes les 200-500ms
-        setInterval(() => {
-          if (Math.random() < 0.3) {
-            // 30% de chance de lancer une animation
-            animateRandomLetter();
-          }
-        }, Math.random() * 300 + 200);
-      }
-
-      startAnimations();
-
-      // Convertir le scroll vertical en défilement horizontal
-      let scrollPosition = 0;
-      const mainContainer = document.querySelector(".main-container");
-      const content = document.querySelector(".content");
-      const releases = document.querySelector(".releases-section");
-
-      window.addEventListener(
-        "wheel",
-        (e) => {
-          e.preventDefault();
-
-          // Ajuster la vitesse du défilement
-          scrollPosition = Math.max(
-            0,
-            Math.min(scrollPosition + e.deltaY * 0.8, window.innerWidth * 1.5)
-          );
-
-          // Appliquer le défilement avec une animation fluide
-          mainContainer.style.transform = `translateX(-${scrollPosition}px)`;
-        },
-        { passive: false }
-      );
-
-      // Gestion de la lecture audio au survol
-      document.addEventListener("DOMContentLoaded", () => {
-        const anarchicCard = document.querySelector(".release-card.anarchic");
-        const player = document.getElementById("anarchic-player");
-
-        // Attendre que l'API SoundCloud soit chargée
-        window.setTimeout(() => {
-          const widget = SC.Widget(player);
-
-          anarchicCard.addEventListener("mouseenter", () => {
-            widget.play();
-          });
-
-          anarchicCard.addEventListener("mouseleave", () => {
-            widget.pause();
-            widget.seekTo(0);
-          });
-        }, 1000);
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
