Mise à jour des releases avec leurs UPC, ISRC et dates de sortie

--- a/index.html
+++ b/index.html
@@ -101,35 +101,134 @@
             <img src="medias/Anarchic.jpg" alt="Anarchic" />
           </a>
           <div class="release-info">
-            <div class="release-title">Anarchic</div>
-            VRSTL Records<br />
-            UPC 5063655124786<br />
-            ISRC GBLFP2516674<br />
-            Release 20250408
+            <div class="title">Anarchic</div>
+            <div class="label">VRSTL Records</div>
+            <div class="upc">
+              <span class="upc-label">UPC</span>
+              <span class="upc-value">506365512478</span>
+            </div>
+            <div class="isrc">
+              <span class="isrc-label">ISRC</span>
+              <span class="isrc-value">GBLFP2516674</span>
+            </div>
+            <div class="release-date">
+              <span class="release-label">Release</span>
+              <span class="release-value">20250408</span>
+            </div>
           </div>
-          <iframe
-            class="soundcloud-player"
-            id="anarchic-player"
-            width="100%"
-            height="166"
-            scrolling="no"
-            frameborder="no"
-            allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/mauditemachine/anarchic&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"
-          ></iframe>
+        </div>
+        <div class="release-card">
+          <img src="files/Autopsynth.jpg" alt="Autopsynth" />
+          <div class="release-info">
+            <div class="title">Autopsynth</div>
+            <div class="label">VRSTL Records</div>
+            <div class="upc">
+              <span class="upc-label">UPC</span>
+              <span class="upc-value">5063655030582</span>
+            </div>
+            <div class="isrc">
+              <span class="isrc-label">ISRC</span>
+              <span class="isrc-value">GX3Q92593896</span>
+            </div>
+            <div class="release-date">
+              <span class="release-label">Release</span>
+              <span class="release-value">20250331</span>
+            </div>
+          </div>
         </div>
         <div class="release-card">
           <img src="medias/Back On Track.jpg" alt="Back On Track" />
           <div class="release-info">
-            <div class="release-title">Back On Track</div>
-            VRSTL Records
+            <div class="title">Back On Track</div>
+            <div class="label">VRSTL Records</div>
+            <div class="upc">
+              <span class="upc-label">UPC</span>
+              <span class="upc-value">5063654888856</span>
+            </div>
+            <div class="isrc">
+              <span class="isrc-label">ISRC</span>
+              <span class="isrc-value">GX3Q92559097</span>
+            </div>
+            <div class="release-date">
+              <span class="release-label">Release</span>
+              <span class="release-value">20250317</span>
+            </div>
           </div>
         </div>
         <div class="release-card">
           <img src="medias/Nocturne.jpg" alt="Nocturne" />
           <div class="release-info">
-            <div class="release-title">Nocturne</div>
-            VRSTL Records
+            <div class="title">Nocturne</div>
+            <div class="label">VRSTL Records</div>
+            <div class="upc">
+              <span class="upc-label">UPC</span>
+              <span class="upc-value">5063654542970</span>
+            </div>
+            <div class="isrc">
+              <span class="isrc-label">ISRC</span>
+              <span class="isrc-value">UKXN22566699</span>
+            </div>
+            <div class="release-date">
+              <span class="release-label">Release</span>
+              <span class="release-value">20250213</span>
+            </div>
+          </div>
+        </div>
+        <div class="release-card">
+          <img src="files/Coagule.jpg" alt="Coagule" />
+          <div class="release-info">
+            <div class="title">Coagule</div>
+            <div class="label">VRSTL Records</div>
+            <div class="upc">
+              <span class="upc-label">UPC</span>
+              <span class="upc-value">5063654435968</span>
+            </div>
+            <div class="isrc">
+              <span class="isrc-label">ISRC</span>
+              <span class="isrc-value">UKXN22538422</span>
+            </div>
+            <div class="release-date">
+              <span class="release-label">Release</span>
+              <span class="release-value">20250205</span>
+            </div>
+          </div>
+        </div>
+        <div class="release-card">
+          <img src="files/Richie.jpg" alt="Richie" />
+          <div class="release-info">
+            <div class="title">Richie</div>
+            <div class="label">VRSTL Records</div>
+            <div class="upc">
+              <span class="upc-label">UPC</span>
+              <span class="upc-value">5063654232857</span>
+            </div>
+            <div class="isrc">
+              <span class="isrc-label">ISRC</span>
+              <span class="isrc-value">GXF9Q2587530</span>
+            </div>
+            <div class="release-date">
+              <span class="release-label">Release</span>
+              <span class="release-value">20250116</span>
+            </div>
+          </div>
+        </div>
+        <div class="release-card">
+          <img src="files/Tati Cardi.png" alt="Tati Cardi" />
+          <div class="release-info">
+            <div class="title">Tati Cardi</div>
+            <div class="label">VRSTL Records</div>
+            <div class="upc">
+              <span class="upc-label">UPC</span>
+              <span class="upc-value">5063654033331</span>
+            </div>
+            <div class="isrc">
+              <span class="isrc-label">ISRC</span>
+              <span class="isrc-value">GXF9Q2523898</span>
+            </div>
+            <div class="release-date">
+              <span class="release-label">Release</span>
+              <span class="release-value">20241225</span>
+            </div>
           </div>
         </div>
       </div>
@@ -139,7 +238,42 @@
 
     <div class="footer">Copyright Maudite Machine 2024</div>
 
+    <!-- SoundCloud Widget API -->
     <script src="https://w.soundcloud.com/player/api.js"></script>
+    <script>
+      let widget;
+
+      function initSoundCloud() {
+        const iframe = document.createElement("iframe");
+        iframe.style.display = "none";
+        iframe.src =
+          "https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/mauditemachine/anarchic&auto_play=false";
+        document.body.appendChild(iframe);
+
+        widget = SC.Widget(iframe);
+
+        widget.bind(SC.Widget.Events.READY, function () {
+          console.log("Widget prêt");
+        });
+      }
+
+      function playSoundCloud() {
+        if (widget) {
+          widget.play();
+        }
+      }
+
+      // Initialiser SoundCloud quand l'API est chargée
+      if (window.SC) {
+        initSoundCloud();
+      } else {
+        window.addEventListener("load", function () {
+          if (window.SC) {
+            initSoundCloud();
+          }
+        });
+      }
+    </script>
     <script src="script.js"></script>
   </body>
 </html>
