Optimisation compatibilité mobile et cross-browser

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             class="logo-desktop"
           />
           <img
-            src="files/logostack.svg"
+            src="files/LogoStack.svg"
             alt="Maudite Machine Logo"
             class="logo-mobile"
           />
