Correction du nom du fichier DramaQueen.jpg dans le HTML

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="release-iframe">
           <div class="release-cover">
-            <img src="files/Dramaqueen.jpg" alt="Drama Queen" />
+            <img src="files/DramaQueen.jpg" alt="Drama Queen" />
             <div class="soundcloud-overlay">
               <iframe
                 width="100%"
