--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Maudite Machine</title>
     <link rel="icon" type="image/x-icon" href="files/favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HP92HGMNJT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HP92HGMNJT');
+    </script>
   </head>
   <body>
     <div class="main-container">
