--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Maudite Machine</title>
     <link rel="icon" type="image/x-icon" href="files/favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HP92HGMNJT"></script>
     <script>
@@ -43,6 +46,11 @@
             <a href="https://ableton.school" class="ableton" target="_blank">Ableton School</a>
           </div>
         </div>
+        <div class="nav-buttons">
+          <a href="#releases">Releases</a>
+          <a href="#events">Events</a>
+          <a href="#medias">Medias</a>
+        </div>
 
         <div class="logo">
           <img src="files/Logo Align White 2.svg" alt="Maudite Machine Logo" class="logo-desktop" />
@@ -74,182 +82,168 @@
           artists in the electronic music world reflect a constant drive to push boundaries and redefine the underground
           with a distinct sonic signature.
         </p>
-      </div>
 
-      <h2 class="section-title">Releases</h2>
-      <div class="releases-section">
-        <div class="release-iframe featured-release">
-          <div class="release-cover">
-            <img src="files/Autopsynth.jpg" alt="Autopsynth" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2041486933&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
+        <section class="releases-section">
+          <div class="featured-release">
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2041486933&color=%23363636&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+            <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/mauditemachine" title="Maudite Machine" target="_blank" style="color: #cccccc; text-decoration: none;">Maudite Machine</a> · <a href="https://soundcloud.com/mauditemachine/autopsynth" title="Autopsynth" target="_blank" style="color: #cccccc; text-decoration: none;">Autopsynth</a></div>
+          </div>
+          <div class="releases-container">
+            <div class="release-iframe">
+              <div class="release-cover">
+                <img src="files/Autopsynth.jpg" alt="Autopsynth" />
+                <div class="soundcloud-overlay">
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2041486933&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="release-iframe">
+              <div class="release-cover">
+                <img src="files/Nocturne.jpg" alt="Nocturne" />
+                <div class="soundcloud-overlay">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    scrolling="no"
+                    frameborder="no"
+                    allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2033069728&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="release-iframe">
+              <div class="release-cover">
+                <img src="files/BackOnTrack.jpg" alt="Back On Track" />
+                <div class="soundcloud-overlay">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    scrolling="no"
+                    frameborder="no"
+                    allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2043036668&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="release-iframe">
+              <div class="release-cover">
+                <img src="files/Coagule.jpg" alt="Coagule" />
+                <div class="soundcloud-overlay">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    scrolling="no"
+                    frameborder="no"
+                    allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2026644908&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="release-iframe">
+              <div class="release-cover">
+                <img src="files/Richie.jpg" alt="Richie" />
+                <div class="soundcloud-overlay">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    scrolling="no"
+                    frameborder="no"
+                    allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2002621459&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="release-iframe">
+              <div class="release-cover">
+                <img src="files/TatiCardi.jpg" alt="Tati Cardi" />
+                <div class="soundcloud-overlay">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    scrolling="no"
+                    frameborder="no"
+                    allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001680067&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="release-iframe">
+              <div class="release-cover">
+                <img src="files/CrushOnYou.jpg" alt="Crush On You" />
+                <div class="soundcloud-overlay">
+                  <iframe
+                    width="100%"
+                    height="100%"
+                    scrolling="no"
+                    frameborder="no"
+                    allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001678383&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+                  ></iframe>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/Nocturne.jpg" alt="Nocturne" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2033069728&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/BackOnTrack.jpg" alt="Back On Track" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2043036668&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/Coagule.jpg" alt="Coagule" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2026644908&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/Richie.jpg" alt="Richie" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2002621459&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/TatiCardi.jpg" alt="Tati Cardi" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001680067&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/CrushOnYou.jpg" alt="Crush On You" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001678383&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/Mixtape36.jpg" alt="Mixtape 36" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1912012793&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/DramaQueen.jpg" alt="Drama Queen" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1971231371&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="release-iframe">
-          <div class="release-cover">
-            <img src="files/Discowriders.jpg" alt="Discowriders" />
-            <div class="soundcloud-overlay">
-              <iframe
-                width="100%"
-                height="100%"
-                scrolling="no"
-                frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1862220756&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-              ></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
+        </section>
 
-      <h2 class="section-title">Past Events</h2>
-      <div class="events-container">
-        <div class="events-accordion"></div>
-        <a href="#" class="link-button">Lien</a>
-      </div>
+        <section class="events-section">
+          <div class="events-timeline">
+            <button class="year-button" data-year="2025">2025</button>
+            <button class="year-button" data-year="2024">2024</button>
+            <button class="year-button" data-year="2023">2023</button>
+            <button class="year-button" data-year="2022">2022</button>
+            <button class="year-button" data-year="2019">2019</button>
+            <button class="year-button" data-year="2018">2018</button>
+            <button class="year-button" data-year="2017">2017</button>
+            <button class="year-button" data-year="2016">2016</button>
+            <button class="year-button" data-year="2015">2015</button>
+            <button class="year-button" data-year="2014">2014</button>
+            <button class="year-button" data-year="2013">2013</button>
+            <button class="year-button" data-year="2012">2012</button>
+            <button class="year-button" data-year="2011">2011</button>
+            <button class="year-button" data-year="2010">2010</button>
+          </div>
+          <div class="events-container">
+            <div class="event-list" data-year="2022">
+              <div class="event">
+                <div class="event-date">December 23, 2022</div>
+                <div class="event-name">Infusion Night</div>
+                <div class="event-location">Studio Coco, Montréal, QC</div>
+                <div class="event-lineup">Lineup: Prana Papa, Said Non Stop, Deepnik</div>
+              </div>
+              <div class="event">
+                <div class="event-date">September 3, 2022</div>
+                <div class="event-name">Good Vibes</div>
+                <div class="event-location">Sainte Agathe de Lotbinière</div>
+              </div>
+              <div class="event">
+                <div class="event-date">August 1, 2022</div>
+                <div class="event-name">Illusion Festival</div>
+                <div class="event-location">QC</div>
+                <div class="event-lineup">Lineup: Secret cinema, perfect stranger, yuli fershtat, ben rama, kris tin</div>
+              </div>
+            </div>
+          </div>
+        </section>
 
-      <section class="gallery-section">
-        <h2 class="section-title">Médias</h2>
-        <div class="gallery-container">
-          <div class="gallery-grid"></div>
-        </div>
-      </section>
+        <section class="gallery-section">
+          <div class="gallery-container">
+            <div class="gallery-grid"></div>
+          </div>
+        </section>
+      </div>
 
       <div class="lightbox">
-        <span class="close">&times;</span>
-        <span class="prev">&lt;</span>
-        <span class="next">&gt;</span>
         <div class="lightbox-content">
           <img src="" alt="" />
         </div>
+        <span class="close">&times;</span>
+        <span class="prev">&#10094;</span>
+        <span class="next">&#10095;</span>
       </div>
 
       <div class="vertical-menu"></div>
