Nettoyage : Suppression du code mobile, conservation uniquement de la version desktop

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-HP92HGMNJT');
     </script>
   </head>
@@ -34,12 +33,8 @@
             <a href="https://mauditemachine.bandcamp.com/" class="bandcamp" target="_blank">Bandcamp</a>
             <a href="https://www.facebook.com/MauditeMachine" class="facebook" target="_blank">Facebook</a>
             <a href="https://www.youtube.com/@mauditemachine-official" class="youtube" target="_blank">Youtube</a>
-            <a href="https://open.spotify.com/intl-fr/artist/2FHPGWPEBQbCsgkLP9uuI4" class="spotify" target="_blank">
-              Spotify
-            </a>
-            <a href="https://www.beatport.com/fr/artist/maudite-machine/500537" class="beatport" target="_blank">
-              Beatport
-            </a>
+            <a href="https://open.spotify.com/intl-fr/artist/2FHPGWPEBQbCsgkLP9uuI4" class="spotify" target="_blank">Spotify</a>
+            <a href="https://www.beatport.com/fr/artist/maudite-machine/500537" class="beatport" target="_blank">Beatport</a>
             <a href="https://www.mixcloud.com/mauditemachine/" class="mixcloud" target="_blank">Mixcloud</a>
             <a href="https://www.tiktok.com/@mauditemachine" class="tiktok" target="_blank">Tiktok</a>
             <a href="#" class="vrstl" target="_blank">VRSTL</a>
@@ -54,24 +49,6 @@
 
         <div class="logo">
           <img src="files/Logo Align White 2.svg" alt="Maudite Machine Logo" class="logo-desktop" />
-          <img src="files/LogoStack.svg" alt="Maudite Machine Logo" class="logo-mobile" />
-          <div class="social-links-mobile">
-            <a href="https://www.soundcloud.com/mauditemachine/" class="soundcloud" target="_blank">Soundcloud</a>
-            <a href="https://www.instagram.com/mauditemachine/" class="instagram" target="_blank">Instagram</a>
-            <a href="https://mauditemachine.bandcamp.com/" class="bandcamp" target="_blank">Bandcamp</a>
-            <a href="https://www.facebook.com/MauditeMachine" class="facebook" target="_blank">Facebook</a>
-            <a href="https://www.youtube.com/@mauditemachine-official" class="youtube" target="_blank">Youtube</a>
-            <a href="https://open.spotify.com/intl-fr/artist/2FHPGWPEBQbCsgkLP9uuI4" class="spotify" target="_blank">
-              Spotify
-            </a>
-            <a href="https://www.beatport.com/fr/artist/maudite-machine/500537" class="beatport" target="_blank">
-              Beatport
-            </a>
-            <a href="https://www.mixcloud.com/mauditemachine/" class="mixcloud" target="_blank">Mixcloud</a>
-            <a href="https://www.tiktok.com/@mauditemachine" class="tiktok" target="_blank">Tiktok</a>
-            <a href="#" class="vrstl" target="_blank">Vrstl</a>
-            <a href="https://ableton.school" class="ableton" target="_blank">Ableton School</a>
-          </div>
         </div>
 
         <p class="description">
@@ -101,14 +78,7 @@
               <div class="release-cover">
                 <img src="files/Nocturne.jpg" alt="Nocturne" />
                 <div class="soundcloud-overlay">
-                  <iframe
-                    width="100%"
-                    height="100%"
-                    scrolling="no"
-                    frameborder="no"
-                    allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2033069728&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-                  ></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2033069728&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
               </div>
             </div>
@@ -116,14 +86,7 @@
               <div class="release-cover">
                 <img src="files/BackOnTrack.jpg" alt="Back On Track" />
                 <div class="soundcloud-overlay">
-                  <iframe
-                    width="100%"
-                    height="100%"
-                    scrolling="no"
-                    frameborder="no"
-                    allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2043036668&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-                  ></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2043036668&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
               </div>
             </div>
@@ -131,14 +94,7 @@
               <div class="release-cover">
                 <img src="files/Coagule.jpg" alt="Coagule" />
                 <div class="soundcloud-overlay">
-                  <iframe
-                    width="100%"
-                    height="100%"
-                    scrolling="no"
-                    frameborder="no"
-                    allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2026644908&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-                  ></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2026644908&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
               </div>
             </div>
@@ -146,14 +102,7 @@
               <div class="release-cover">
                 <img src="files/Richie.jpg" alt="Richie" />
                 <div class="soundcloud-overlay">
-                  <iframe
-                    width="100%"
-                    height="100%"
-                    scrolling="no"
-                    frameborder="no"
-                    allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2002621459&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-                  ></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2002621459&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
               </div>
             </div>
@@ -161,14 +110,7 @@
               <div class="release-cover">
                 <img src="files/TatiCardi.jpg" alt="Tati Cardi" />
                 <div class="soundcloud-overlay">
-                  <iframe
-                    width="100%"
-                    height="100%"
-                    scrolling="no"
-                    frameborder="no"
-                    allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001680067&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-                  ></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001680067&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
               </div>
             </div>
@@ -176,14 +118,7 @@
               <div class="release-cover">
                 <img src="files/CrushOnYou.jpg" alt="Crush On You" />
                 <div class="soundcloud-overlay">
-                  <iframe
-                    width="100%"
-                    height="100%"
-                    scrolling="no"
-                    frameborder="no"
-                    allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001678383&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-                  ></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2001678383&color=%23232323&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
               </div>
             </div>
