--- a/indexMob.html
+++ b/indexMob.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maudite Machine</title>
+    <script>
+      // Redirection vers la version desktop si l'écran est grand
+      if (window.innerWidth > 768) {
+        window.location.href = 'index.html';
+      }
+    </script>
     <link rel="icon" type="image/x-icon" href="files/favicon.ico" />
     <link rel="stylesheet" href="stylesMob.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
