--- a/indexMob.html
+++ b/indexMob.html
@@ -54,6 +54,12 @@
           <img src="files/LogoStack.svg" alt="Maudite Machine Logo" class="logo-mobile" />
         </div>
 
+        <div class="nav-buttons">
+          <a href="#releases">Releases</a>
+          <a href="#events">Events</a>
+          <a href="#medias">Medias</a>
+        </div>
+
         <p class="description">
           Maudite Machine is a Canadian DJ and producer known for his raw, hypnotic approach to dark disco and indie
           dance. With over 15 years in the Montreal scene, he has performed at major events and iconic venues across the
@@ -63,10 +69,16 @@
           with a distinct sonic signature.
         </p>
 
-        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2041486933&color=%23363125&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2041486933&color=%23363125&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&show_artwork=true&visual=true"></iframe>
         <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
           <a href="https://soundcloud.com/mauditemachine" title="Maudite Machine" target="_blank" style="color: #cccccc; text-decoration: none;">Maudite Machine</a> · 
           <a href="https://soundcloud.com/mauditemachine/autopsynth" title="Autopsynth" target="_blank" style="color: #cccccc; text-decoration: none;">Autopsynth</a>
+        </div>
+
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2033069728&color=%23363125&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&show_artwork=true&visual=true"></iframe>
+        <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+          <a href="https://soundcloud.com/mauditemachine" title="Maudite Machine" target="_blank" style="color: #cccccc; text-decoration: none;">Maudite Machine</a> · 
+          <a href="https://soundcloud.com/mauditemachine/nocturne" title="Nocturne" target="_blank" style="color: #cccccc; text-decoration: none;">Nocturne</a>
         </div>
 
         <section class="releases-section">
@@ -135,41 +147,46 @@
         </section>
 
         <section class="events-section">
-          <div class="events-timeline">
-            <button class="year-button" data-year="2025">2025</button>
-            <button class="year-button" data-year="2024">2024</button>
-            <button class="year-button" data-year="2023">2023</button>
-            <button class="year-button" data-year="2022">2022</button>
-            <button class="year-button" data-year="2019">2019</button>
-            <button class="year-button" data-year="2018">2018</button>
-            <button class="year-button" data-year="2017">2017</button>
-            <button class="year-button" data-year="2016">2016</button>
-            <button class="year-button" data-year="2015">2015</button>
-            <button class="year-button" data-year="2014">2014</button>
-            <button class="year-button" data-year="2013">2013</button>
-            <button class="year-button" data-year="2012">2012</button>
-            <button class="year-button" data-year="2011">2011</button>
-            <button class="year-button" data-year="2010">2010</button>
-          </div>
-          <div class="events-container">
-            <div class="event-list" data-year="2022">
-              <div class="event">
-                <div class="event-date">December 23, 2022</div>
-                <div class="event-name">Infusion Night</div>
-                <div class="event-location">Studio Coco, Montréal, QC</div>
-                <div class="event-lineup">Lineup: Prana Papa, Said Non Stop, Deepnik</div>
-              </div>
-              <div class="event">
-                <div class="event-date">September 3, 2022</div>
-                <div class="event-name">Good Vibes</div>
-                <div class="event-location">Sainte Agathe de Lotbinière</div>
-              </div>
-              <div class="event">
-                <div class="event-date">August 1, 2022</div>
-                <div class="event-name">Illusion Festival</div>
-                <div class="event-location">QC</div>
-                <div class="event-lineup">Lineup: Secret cinema, perfect stranger, yuli fershtat, ben rama, kris tin</div>
-              </div>
+          <div class="events-accordion">
+            <div class="accordion-item" data-year="2025">
+              <div class="accordion-header">2025</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2024">
+              <div class="accordion-header">2024</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2023">
+              <div class="accordion-header">2023</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2022">
+              <div class="accordion-header">2022</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2021">
+              <div class="accordion-header">2021</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2020">
+              <div class="accordion-header">2020</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2019">
+              <div class="accordion-header">2019</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2018">
+              <div class="accordion-header">2018</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2017">
+              <div class="accordion-header">2017</div>
+              <div class="accordion-content"></div>
+            </div>
+            <div class="accordion-item" data-year="2016">
+              <div class="accordion-header">2016</div>
+              <div class="accordion-content"></div>
             </div>
           </div>
         </section>
