Suppression des boutons de navigation en version mobile

--- a/indexMob.html
+++ b/indexMob.html
@@ -54,12 +54,6 @@
           <img src="files/LogoStack.svg" alt="Maudite Machine Logo" class="logo-mobile" />
         </div>
 
-        <div class="nav-buttons">
-          <a href="#releases">Releases</a>
-          <a href="#events">Events</a>
-          <a href="#medias">Medias</a>
-        </div>
-
         <p class="description">
           Maudite Machine is a Canadian DJ and producer known for his raw, hypnotic approach to dark disco and indie
           dance. With over 15 years in the Montreal scene, he has performed at major events and iconic venues across the
@@ -147,48 +141,7 @@
         </section>
 
         <section class="events-section">
-          <div class="events-accordion">
-            <div class="accordion-item" data-year="2025">
-              <div class="accordion-header">2025</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2024">
-              <div class="accordion-header">2024</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2023">
-              <div class="accordion-header">2023</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2022">
-              <div class="accordion-header">2022</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2021">
-              <div class="accordion-header">2021</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2020">
-              <div class="accordion-header">2020</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2019">
-              <div class="accordion-header">2019</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2018">
-              <div class="accordion-header">2018</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2017">
-              <div class="accordion-header">2017</div>
-              <div class="accordion-content"></div>
-            </div>
-            <div class="accordion-item" data-year="2016">
-              <div class="accordion-header">2016</div>
-              <div class="accordion-content"></div>
-            </div>
-          </div>
+          <div class="events-list"></div>
         </section>
 
         <section class="gallery-section">
