fix: navigation arrows style in slider

--- a/indexMob.html
+++ b/indexMob.html
@@ -144,6 +144,48 @@
           <div class="events-list"></div>
         </section>
 
+        <section class="medias-section">
+          <h2 class="medias-title">Médias</h2>
+          <div class="slider-container">
+            <div class="slider">
+              <div class="slider-track">
+                <div class="slide">
+                  <img src="medias/464921350_8781568558569455_7872671644658881068_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/463927235_3420762761392507_3255454865376167519_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/480405408_1246208003891242_3165125023039024413_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/476466146_1239403404571702_8836682943722289976_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/474647968_122114264516675204_8080891412134578876_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/48926454_2070768166315570_8931209051207892992_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/484116540_1268874791624563_3155457056479926862_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/482077931_1261499695695406_397840931313933555_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/22279542_10154949783416961_1236740403543318439_n.jpg" alt="Performance" />
+                </div>
+                <div class="slide">
+                  <img src="medias/488940464_2799921333526417_141836174029281402_n.jpg" alt="Performance" />
+                </div>
+              </div>
+            </div>
+            <button class="slider-button prev"></button>
+            <button class="slider-button next"></button>
+          </div>
+        </section>
+
         <section class="gallery-section">
           <div class="gallery-container">
             <div class="gallery-grid"></div>
@@ -153,11 +195,9 @@
 
       <div class="lightbox">
         <div class="lightbox-content">
-          <img src="" alt="" />
+          <img src="" alt="">
+          <button class="close-lightbox">×</button>
         </div>
-        <span class="close">&times;</span>
-        <span class="prev">&#10094;</span>
-        <span class="next">&#10095;</span>
       </div>
 
       <div class="vertical-menu"></div>
